# Chatbot_ToolCalling_Agent

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  settings.py  start.sh
backend/data/: database.py
backend/domains/: __init__.py  conversation.py  conversation_history.py  document.py  document_chunk.py  process.py  user.py
backend/domains/abstractions/: domain_base.py
backend/domains/enums/: message_type.py  process_status.py
backend/features/: base_handler.py
backend/features/chat/: chat_controller.py
backend/features/chat/methods/: __init__.py  chatbot.py  chatbot_stream.py
backend/features/conversation/: conversation_controller.py
backend/features/conversation/methods/: __init__.py  create.py  history.py
backend/features/document/: document_controller.py
backend/features/document/methods/: delete.py  list.py  upload.py
backend/infrastructure/dtos/chat/: message_history.py  message_result.py
backend/infrastructure/dtos/document/: document_result.py  upload_result.py
backend/infrastructure/dtos/generic/: register_result.py
backend/infrastructure/services/: chatbot_service.py  chatbot_service_stream.py  rag_service.py
backend/infrastructure/tools/: process_tools.py  rag_tools.py
backend/migrations/: env.py
backend/migrations/versions/: 008d5fcf3d7c_initial_migration.py  6ba9418b70e3_initial_migration.py  b3c4d5e6f7a8_add_pgvector_documents.py  f5728765f4a2_initial_migration.py
backend/services/: chatbot_service.py
backend/tools/: process_tools.py
(+6 files in other folders)
